--- a/admin/language/en-GB/en-GB.com_terebinth.sys.ini
+++ b/admin/language/en-GB/en-GB.com_terebinth.sys.ini
@@ -1,4 +1,4 @@
-COM_TEREBINTH="Terebinth"
+COM_TEREBINTH="Terebinth Component"
 COM_TEREBINTH_DESCRIPTION="Automatically Purge Varnish Caches"
 COM_TEREBINTH_TEREBINTH_VIEW_DEFAULT_TITLE="Terebinth"
 COM_TEREBINTH_TEREBINTH_VIEW_DEFAULT_DESC="This view displays a selected varnish host"
