changed menu item name

--- a/admin/language/en-GB/en-GB.com_terebinth.ini
+++ b/admin/language/en-GB/en-GB.com_terebinth.ini
@@ -1,4 +1,5 @@
 COM_TEREBINTH="Terebinth Component"
+COM_TEREBINTH_MENU_NAME="Terebinth"
 COM_TEREBINTH_ADMINISTRATION="Terebinth - Administration"
 COM_TEREBINTH_TEREBINTH_CREATING="Terebinth - Creating"
 COM_TEREBINTH_TEREBINTH_DETAILS="Details"
