fixes javascript client-side validation

--- a/admin/language/en-GB/en-GB.com_terebinth.ini
+++ b/admin/language/en-GB/en-GB.com_terebinth.ini
@@ -6,7 +6,7 @@ COM_TEREBINTH_TEREBINTH_DETAILS="Details"
 COM_TEREBINTH_TEREBINTH_EDITING="Terebinth - Editing"
 COM_TEREBINTH_TEREBINTH_ERROR_UNACCEPTABLE="Some values are unacceptable"
 COM_TEREBINTH_TEREBINTH_HOST_DESC="This host will be displayed"
-COM_TEREBINTH_TEREBINTH_HOST_LABEL="Varnish Host:"
+COM_TEREBINTH_TEREBINTH_HOST_LABEL="Varnish Host"
 COM_TEREBINTH_TEREBINTH_HEADING_TEREBINTH_HOST="Varnish Hosts"
 COM_TEREBINTH_TEREBINTH_HEADING_ID="Id"
 COM_TEREBINTH_MANAGER_TEREBINTH_EDIT="Terebinth manager: Edit Host"
